# runtime

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  railpack.json  railpack.toml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rfc_proposal.yml
.github/workflows/: ci.yml  docker.yml  integration-tests.yml  publish.yml
crates/macp-auth/: README.md
crates/macp-core/: README.md
crates/macp-core/src/policy/: mod.rs  rules.rs
crates/macp-modes/: README.md
crates/macp-modes/src/mode/: decision.rs
crates/macp-pb/: README.md
crates/macp-policy/: README.md
crates/macp-policy/src/: evaluator.rs  lib.rs
crates/macp-storage/: README.md
docs/: API.md  README.md  architecture.md  deployment.md  examples.md  getting-started.md  modes.md  policy.md  protocol.md  sdk-guide.md  testing.md
integration_tests/: Cargo.toml
integration_tests/src/: config.rs  helpers.rs  lib.rs  server_manager.rs
integration_tests/src/macp_tools/: commit.rs  decision.rs  handoff.rs  mod.rs  proposal.rs  query.rs  quorum.rs  session_start.rs  task.rs
integration_tests/tests/: tier1.rs  tier1_jwt.rs  tier2.rs  tier3.rs
integration_tests/tests/common/: mod.rs
integration_tests/tests/tier1_protocol/: mod.rs  test_cancel_session.rs  test_concurrent_sessions.rs  test_decision_mode.rs  test_error_paths.rs  test_handoff_mode.rs  test_initialize.rs  test_mode_registry.rs  test_multi_round_mode.rs  test_passive_subscribe.rs  test_policy_registry.rs  test_proposal_mode.rs  test_quorum_mode.rs  test_reject_paths.rs  test_rfc_cross_cutting.rs  test_session_lifecycle.rs  test_stream_session.rs  test_task_mode.rs  test_validation_gaps.rs
integration_tests/tests/tier2_agents/: mod.rs  test_decision_agent.rs  test_handoff_agent.rs  test_multi_agent.rs  test_proposal_negotiation.rs  test_task_delegation.rs
integration_tests/tests/tier3_e2e/: mod.rs  test_e2e_decision.rs  test_e2e_decision_with_signals.rs  test_e2e_task.rs
proto/: macp.proto
proto/macp/v1/: core.proto  envelope.proto  macp.proto
scripts/: run-e2e.sh
src/: error.rs  lib.rs  log_store.rs  main.rs  metrics.rs  mode_registry.rs  registry.rs  replay.rs  runtime.rs  security.rs  server.rs  session.rs  storage.rs  stream_bus.rs
src/auth/: chain.rs  mod.rs  resolver.rs
src/auth/resolvers/: jwt_bearer.rs  mod.rs  static_bearer.rs
src/extensions/: mod.rs  provider.rs  registry.rs
src/mode/: decision.rs  handoff.rs  mod.rs  multi_round.rs  passthrough.rs  proposal.rs  quorum.rs  task.rs  util.rs
src/policy/: defaults.rs  evaluator.rs  mod.rs  registry.rs  rules.rs
src/storage/: compaction.rs  file.rs  memory.rs  migration.rs  mod.rs  recovery.rs  redis_backend.rs  rocksdb.rs
tests/: concurrent_messages.rs  conformance_loader.rs  file_backend_integration.rs  integration_mode_lifecycle.rs  replay_round_trip.rs  stream_integration.rs
tests/conformance/: decision_happy_path.json  decision_negative_outcome.json  decision_reject_paths.json  handoff_happy_path.json  handoff_reject_paths.json  multi_round_happy_path.json  multi_round_reject_paths.json  proposal_happy_path.json  proposal_reject_paths.json  quorum_happy_path.json  quorum_reject_paths.json  task_happy_path.json  task_reject_paths.json
