[package]
name = "macp-runtime"
version = "0.4.0"
edition = "2021"
default-run = "macp-runtime"

[features]
default = []
rocksdb-backend = ["dep:rocksdb"]
redis-backend = ["dep:redis"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
tonic-health = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
thiserror = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
futures-core = "0.3"
async-stream = "0.3"
async-trait = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"], default-features = false }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.15", features = ["tonic"], optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }
rocksdb = { version = "0.22", optional = true }
redis = { version = "0.27", features = ["tokio-comp", "aio"], optional = true }
# Proto definitions — local path for WatchSessions development.
# Switch back to crates.io after publishing: macp-proto = "0.2.0"
macp-proto = { path = "../multiagentcoordinationprotocol/packages/proto-rust" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-prost-build = "0.14"
