[package]
name = "macp-integration-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
macp-runtime = { path = ".." }

tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"

tokio = { version = "1", features = ["full", "process"] }

rig-core = "0.34"

uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
